@@ -107,6 +107,14 @@ CsPadPedestals::beginRun(Event& evt, Env& env)
     ++ count;
   }
 
+  shared_ptr<Psana::CsPad::ConfigV4> config4 = env.configStore().get(src, &m_src);
+  if (config4.get()) {
+    for (int i = 0; i < MaxQuads; ++i) {
+      m_segMask[i] = config4->roiMask(i);
+    }
+    ++ count;
+  }
+
   if (not count) {
     MsgLog(name(), error, "No CsPad configuration objects found, terminating.");
     terminate();
